--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="temp/styles/styles.css">
     <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-    <script  src="Navig.js"> </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
     <title>Golden Spoon</title>
   </head>
 
@@ -19,127 +20,135 @@
     <div class="container">
       <header>
 
-      <section class="layoutHeaderSection">
-          <div class="left">
-              <div class="headerLinks">
-                  <a href="#">Digital Edition</a>
-                  <a href="#">Newsletters</a>
+        <div class="menuIcon"></div>
+        
+          <section class="headerNav">
+            <section class="layoutHeaderSection">
+              <div class="eatingWellLogo ">
+                  <a href="#">
+                  <img alt="GoldenSpoon" src="./incl/img/logo.png" />
+                  </a>
               </div>
-              <!-- The NEW 'Search Bar' is made up of two <div>'s.  The OLD 'Search Bar' is made up of a <form> and a <div>. -->
+              <div class="topRight">
+                <div class="left">
 
-              <div class="materialize-row no-side-spacing nav-search">
-                <!--topNavSearchMenu_showing comes from the popup panel, and is used here to show the right state of the spyglass-->
-                <span class="search-spyglass">
-                    <img alt="Search" height="23" width="23" src="https://images.media-allrecipes.com/assets/eatingWell/svg/icon/shared/search-magnifier-green.svg" />
-                </span>
-                <input id="searchText"  type="text" placeholder="Search EatingWell">
-              </div>
-
-          </div>
-
-
-                  <div class="eatingWellLogo ">
-                      <a href="http://www.eatingwell.com">
-                      <img alt="EatingWell" src="https://images.media-allrecipes.com/assets/eatingWell/svg/icon/shared/eatingwell_logo.svg" />
-                      </a>
-                  </div>
-                  <div class="right">
-                      <div class="signUp">
-                        <a href="#">JOIN NOW</a>
+                    <p>Find a Recipe !</p>
+                    <div class="searchBox">
+                      <input type="text" placeholder="Search for a Recipe !!!"class="searchBox-input" >
+                      <div class="searchBox-iconcontainer">
+                        <i class="fas fa-search searchBox-icon"></i>
                       </div>
-                  </div>
-  </section>
+                    </div>
 
-      <!-- MAIN NAvigation -->
-        <nav class="main-navigation">
-          <ul class="parent">
-            <li><a href="#">Moroccan</a>
-              <div class="subMenu">
-                <ul class="child">
-                  <li><a href="#">Vegetable Tajine</a></li>
-                  <li><a href="#">Couscous</a></li>
-                  <li><a href="#">Soup & Harira</a></li>
-                  <li><a href="#">Salad</a></li>
-                  <li><a href="#">Cookies and sweets</a></li>
-                  <li><a href="#">Bastilla</a></li>
-                </ul>
+                </div>
+                <div class="right">
+                    <div class="signUp">
+                      <a href="#">SignUp</a>
+                    </div>
+                    <div class="logIn">
+                      <a href="#">LogIn</a>
+                    </div>
+                </div>
               </div>
-            </li>
-            <li><a href="#">African</a>
-              <div class="subMenu ">
-                <ul class="child">
-                  <li><a href="#">North African</a></li>
-                  <li><a href="#">South African</a></li>
-                  <li><a href="#">Easter African</a></li>
-                  <li><a href="#">Equatorial African</a></li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="#">European </a>
-              <div class="subMenu ">
-                <ul class="child">
-                  <li><a href="#">Italian </a></li>
-                  <li><a href="#">Spanish </a></li>
-                  <li><a href="#">Frensh </a></li>
-                  <li><a href="#">Northern Europ </a></li>
-                  <li><a href="#">Eastern Europ </a></li>
-                  <li><a href="#">Other</a></li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="#">Asian</a>
-              <div class="subMenu ">
-                <ul class="child">
-                  <li><a href="#">Thai </a></li>
-                  <li><a href="#">Chinese </a></li>
-                  <li><a href="#">Indian </a></li>
-                  <li><a href="#">Filipino </a></li>
-                  <li><a href="#">vientnam </a></li>
-                  <li><a href="#">Other</a></li>
-                </ul>
-              </div>
-            </li>
-            <li ><a href="#">American </a>
-              <div class="subMenu ">
-                <ul class="child">
-                  <li><a href="#">Burger</a></li>
-                  <li><a href="#">Subs</a></li>
-                  <li><a href="#">Lasagne</a></li>
-                  <li><a href="#">Barbeque</a></li>
-                  <li><a href="#">Other</a></li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="#">Latino </a>
-              <div class="subMenu ">
-                <ul class="child">
-                  <li><a href="#">Carebean </a></li>
-                  <li><a href="#">South America </a></li>
-                  <li><a href="#">other</a></li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="#">Healthy</a>
-              <div class="subMenu ">
-                <ul class="child">
-                  <li><a href="#">Salad</a></li>
-                  <li><a href="#">soups</a></li>
-                  <li><a href="#">other</a></li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-        </nav>
+
+
+
+        </section>
+
+          <!-- MAIN NAvigation -->
+            <nav class="main-navigation">
+              <ul class="parent">
+                <li><a href="#">Moroccan</a>
+                  <div class="subMenu">
+                    <ul class="child">
+                      <li><a href="#">Vegetable Tajine</a></li>
+                      <li><a href="#">Couscous</a></li>
+                      <li><a href="#">Soup & Harira</a></li>
+                      <li><a href="#">Salad</a></li>
+                      <li><a href="#">Cookies and sweets</a></li>
+                      <li><a href="#">Bastilla</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li><a href="#">African</a>
+                  <div class="subMenu ">
+                    <ul class="child">
+                      <li><a href="#">North African</a></li>
+                      <li><a href="#">South African</a></li>
+                      <li><a href="#">Easter African</a></li>
+                      <li><a href="#">Equatorial African</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li><a href="#">European </a>
+                  <div class="subMenu ">
+                    <ul class="child">
+                      <li><a href="#">Italian </a></li>
+                      <li><a href="#">Spanish </a></li>
+                      <li><a href="#">Frensh </a></li>
+                      <li><a href="#">Northern Europ </a></li>
+                      <li><a href="#">Eastern Europ </a></li>
+                      <li><a href="#">Other</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li><a href="#">Asian</a>
+                  <div class="subMenu ">
+                    <ul class="child">
+                      <li><a href="#">Thai </a></li>
+                      <li><a href="#">Chinese </a></li>
+                      <li><a href="#">Indian </a></li>
+                      <li><a href="#">Filipino </a></li>
+                      <li><a href="#">vientnam </a></li>
+                      <li><a href="#">Other</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li ><a href="#">American </a>
+                  <div class="subMenu ">
+                    <ul class="child">
+                      <li><a href="#">Burger</a></li>
+                      <li><a href="#">Subs</a></li>
+                      <li><a href="#">Lasagne</a></li>
+                      <li><a href="#">Barbeque</a></li>
+                      <li><a href="#">Other</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li><a href="#">Latino </a>
+                  <div class="subMenu ">
+                    <ul class="child">
+                      <li><a href="#">Carebean </a></li>
+                      <li><a href="#">South America </a></li>
+                      <li><a href="#">other</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li><a href="#">Healthy</a>
+                  <div class="subMenu ">
+                    <ul class="child">
+                      <li><a href="#">Salad</a></li>
+                      <li><a href="#">soups</a></li>
+                      <li><a href="#">other</a></li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </nav>
+
+          </section>
+
+
 
       </header>
 
   <section class="hero-slider">
 
-      <div class="image" ><a href="http://www.eatingwell.com/article/290729/how-to-grow-fruits-vegetables-from-food-scraps/" style="cursor:pointer;">
-      <img src="http://www.eatingwell.com/sites/default/files/images/Sprouts1275px.jpg"></a>
+      <div class="image" ><a href="#">
+      <img src="./incl/img/home.png"></a>
 
         <div class="whiteBox">
-          <div class="boxTitle"><a href="http://www.eatingwell.com/article/290729/how-to-grow-fruits-vegetables-from-food-scraps/">How to Grow Fruits & Vegetables from Food Scraps</a>
+          <div class="boxTitle"><a href="#">How to Grow Fruits & Vegetables from Food Scraps</a>
           </div>
 
           <div class="boxDesciption">Give old produce new life by regrowing it into plants.
@@ -156,8 +165,8 @@
   <section class="listCards ">
     <div class="mainCardsContainer">
       <div class="cardTop">
-        <h2 class="cardsTitle"><a href="http://www.eatingwell.com/recipes/">Healthy Recipes</a></h2>
-        <a class="cardsLink" href="http://www.eatingwell.com/recipes/">More Healthy Recipes</a>
+        <h2 class="cardsTitle"><a href="#">Healthy Recipes</a></h2>
+        <a class="cardsLink" href="#">More Healthy Recipes</a>
       </div>
       <div class="cardsContainer">
         <div class="contentCardContainer">
@@ -210,8 +219,9 @@
   </section>
     </div>
 
-
-
+<footer></footer>
+<script  src="./temp/scripts/app.js"> </script>
   </body>
+
 
 </html>
