finish mobile menu

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <div class="container">
       <header>
 
-        <div class="menuIcon"></div>
-        
+        <div class="menuIcon">
+          <div class="menuIcon_midle"></div>
+        </div>
+
           <section class="headerNav">
             <section class="layoutHeaderSection">
               <div class="eatingWellLogo ">
